<resources>
    <string name="app_name">DartsApplication</string>
    <string name="background">Background</string>
    <string name="start_game">Start Game</string>
    <string name="number_of_legs">Number of Legs</string>
    <string name="best_of">Best of</string>
    <string name="first_to">First to</string>
    <string name="legs">Legs</string>
    <string name="sets">Sets</string>
    <string name="name_player_2">Name Player 2</string>
    <string name="player_1">Name Player 1</string>
    <string name="_501">501</string>
    <string name="throw_for_the_bull">Throw for the Bull</string>
    <string name="select_player_closest_to_bull">Select player closest to Bull</string>
    <string name="todo">TODO</string>
    <string name="darts_3">Darts: 3</string>
    <string name="darts_31">Darts: 31</string>
    <string name="avg_130">Avg: 130</string>
    <string name="avg_180">Avg: 180</string>
    <string name="_0">0</string>
    <string name="textview">TextView</string>
    <string name="title_activity_stats">Stats</string>
    <string name="endGame">End Game Statistics</string>
</resources>
