<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/pregameback" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/throw_for_the_bull"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:id="@+id/btnPlayer1"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_rounded_corners"
        android:backgroundTint="@color/colorButton4"
        android:elevation="4dp"
        android:shadowColor="#F2000000"
        android:text="@string/name_player_2"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toTopOf="@id/btnPlayer2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnPlayer2"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_rounded_corners"
        android:backgroundTint="#FFFFFF"
        android:elevation="4dp"
        android:shadowColor="#F2000000"
        android:text="@string/name_player_2"
        android:textColor="@color/colorButton"
        app:layout_constraintBottom_toTopOf="@id/btnStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_rounded_corners"
        android:backgroundTint="@color/colorButton"
        android:elevation="4dp"
        android:shadowColor="#F2000000"
        android:text="@string/start_game"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/select_player_closest_to_bull"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/btnPlayer1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>